HR_Leave/Styles/MasterStyleSheet.css
body {
    background: #fafafa;
    width:100%;
    height:100%;
    padding:0;
    margin:0;
}

.wrapper {
    display: flex;
    align-items: stretch;
}

#sidebar {
    background: #7386D5;
    color: #fff;
    transition: all 0.2s;
    min-width: 250px;
    max-width: 250px;
    min-height: 100vh;
}


#mopd-logo{
    width:200px;
    height:200px;
    border: 1px solid black;
}

.sidebar-header{
    text-align:center;
}

#sidebar .sidebar-header {
    padding: 20px;
}

#sidebar ul.components {
    padding-top: 20px;
    border-bottom: 1px solid #47748b;
}

#sidebar ul p {
    color: #fff;
    padding: 10px;
}

#sidebar ul li a {
    padding: 10px;
    font-size: 1.1em;
    display: block;
}
#sidebar ul li a:hover {
    color: #7386d5;
    background: #fff;
}

#sidebar ul li.active > a, a[aria-expanded="true"] {
    color: #fff;
    background: #6d7fcc;
}

#sidebar.active {
    min-width: 95px;
    max-width: 95px;
    text-align: center;
}

#sidebar .sidebar-header strong {
    display: none;
}


#sidebar.active .sidebar-header strong {
    display: block;
    font-size: 1.2em;
}

#sidebar ul li a {
    text-align: left;
    width: 100%;
}
#sidebar ul li a i{
    width: 20px;
    text-align:center
}
#sidebar ul li a span{
    width: 100px;
}

#sidebar.active ul li a {
    padding: 10px 10px;
    text-align: center;
    font-size: 0.85em;
}

#sidebar.active ul li a i {
    width:100%;
    margin-right:  0;
    display: block;
    font-size: 1.8em;
    margin-bottom: 5px;
}


/*Style dropdowns*/

#sidebar ul li ul li{
    background-color:#6778bf;
}

a, a:hover, a:focus {
    color: inherit;
    text-decoration: none;
    transition: all 0.3s;
}

#content{
    padding:25px;
}

